--- a/kartra_video_post_template.html
+++ b/kartra_video_post_template.html
@@ -9,7 +9,7 @@
     border-radius: 50%;
     border-left-color: #09f;
     animation: spin 1s infinite linear;
-    margin: -18px 0 0 -18px;
+    margin: 4rem;
   }
   @keyframes spin {
     0% {
@@ -64,3 +64,4 @@
     fetchData();
   });
 </script>
+<!-- {0} -->
